--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "@tanstack/react-query": "^5.90.11",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
