--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.9",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "@tanstack/react-query": "^5.90.11",
+    "graphql": "^16.12.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
