--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@splidejs/splide": "^4.1.4",
     "@tanstack/react-query": "^5.90.11",
     "graphql": "^16.12.0",
-    "next": "16.0.3",
+    "next": "^16.0.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sass": "^1.94.2"
